@@ -87,6 +87,10 @@ It adds these directives:
    caption to the diagram.  Naturally, diagrams marked as "inline" cannot have a
    caption.
 
+.. versionchanged:: 1.4
+   All three directives support a ``graphviz_dot`` option that can be switch the
+   ``dot`` command within the directive.
+
 There are also these new config values:
 
 .. confval:: graphviz_dot
