@@ -42,6 +42,7 @@ Features added
 * #1030: Make page reference names for latex_show_pagerefs translatable
 * #2162: Add Sphinx.add_source_parser() to add source_suffix and source_parsers from extension
 * #2207: Add sphinx.parsers.Parser class; a base class for new parsers
+* #656: Add ``graphviz_dot`` option to graphviz directives to switch the ``dot`` command
 
 Bugs fixed
 ----------
